--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,7 @@ body {
   font-weight: 400;
   color: #fff;
   background-color: #0e1539;
+  overflow-x: hidden;
 }
 
 /* HEADER */
@@ -196,13 +197,14 @@ body {
 }
 
 .hero-img {
-  width: 600px;
-  height: 600px;
+  width: 800px;
+  height: auto;
   position: absolute;
-  right: 0;
-  bottom: 15%;
-  object-fit: cover;
-  opacity: 0;
+  right: -10%;
+  bottom: 25%;
+  /* object-fit: cover; */
+  /* object-position: 0 10%; */
+  border-radius: 15px;
 }
 
 /* Feature */
