--- a/style/style.css
+++ b/style/style.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  font-family: "Ubuntu", sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   line-height: 1;
   font-weight: 400;
   color: #fff;
@@ -29,6 +29,15 @@ body {
   letter-spacing: -0.5px;
 }
 
+.section {
+  transition: transform 1s, opacity 1s;
+}
+
+.section.section--hidden {
+  opacity: 0;
+  transform: translateY(8rem);
+}
+
 /* HEADER */
 .header {
   display: flex;
@@ -42,7 +51,6 @@ body {
 
 .logo {
   height: 3.2rem;
-  opacity: 0;
 }
 
 .logo-text {
@@ -111,6 +119,28 @@ body {
   border-radius: 10px;
   background-color: #fcc419;
   color: #444;
+}
+
+.nav-btn:hover {
+  background-color: #cfa012;
+}
+
+/* STICKY NAV */
+.sticky .header {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 8rem;
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: hsla(231, 60%, 9%, 0.69);
+  z-index: 999;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+}
+
+.sticky .section-hero {
+  margin-top: 9.6rem;
 }
 
 /* HERO SECTION */
@@ -217,6 +247,7 @@ body {
   /* object-fit: cover; */
   /* object-position: 0 10%; */
   border-radius: 15px;
+  box-shadow: 0 20px 30px 0 rgba(200, 200, 200, 0.07);
 }
 
 /* Feature */
@@ -275,7 +306,7 @@ body {
 
 .fea-img-box::before,
 .fea-img-box::after {
-  content: "";
+  content: '';
   display: block;
   border-radius: 50%;
   position: absolute;
@@ -284,23 +315,9 @@ body {
   transform: translate(-50%, -50%);
 }
 
-/* .fea-img-box::before {
-  width: 60%;
-  padding-bottom: 60%;
-
-  background-color: #fdf2e9;
-  z-index: -2;
-}
-
-.fea-img-box::after {
-  width: 45%;
-  padding-bottom: 45%;
-  background-color: #fae5d3;
-  z-index: -1;
-} */
-
 .fea-img {
   width: 100%;
+  box-shadow: 0 20px 30px 0 rgba(200, 200, 200, 0.07);
 }
 
 /* FAQ */
@@ -341,6 +358,7 @@ body {
   padding: 12px;
   border-top: 0.25px solid #828899;
   border-bottom: 0.25px solid #828899;
+  transition: all 0.3s ease-in-out;
 }
 
 .item.open {
@@ -355,11 +373,25 @@ body {
   display: block;
 }
 
+.open .arrow-icon {
+  transform: rotate(90deg);
+  transition: transform 0.2s ease-in-out;
+}
+
+.hidden .arrow-icon {
+  transform: rotate(0deg);
+  transition: transform 0.2s ease-in-out;
+}
+
 .title-faq {
   color: #868e96;
   font-size: 24px;
   font-weight: bold;
   padding: 16px 32px;
+}
+
+.item:hover {
+  cursor: pointer;
 }
 
 .title-faq:hover {
