--- a/style/activate.css
+++ b/style/activate.css
@@ -1,3 +1,7 @@
+html {
+  font-size: 62.5%;
+}
+
 .activate--container {
   display: flex;
   flex-direction: column;
@@ -6,20 +10,20 @@
 }
 
 .logo-img {
-  width: 200px;
+  width: 20rem;
   height: auto;
-  padding: 20px;
-  padding-top: 30px;
+  padding: 2rem;
+  padding-top: 3rem;
 }
 
 .activate-heading {
   color: #eee;
-  margin-bottom: 20px;
+  margin-bottom: 2rem;
 }
 
 .activate-description {
-  font-size: 18px;
-  margin-bottom: 50px;
+  font-size: 1.8rem;
+  margin-bottom: 5rem;
   color: #aaa;
 }
 
@@ -32,18 +36,18 @@
 }
 
 .logo-meta {
-  width: 250px;
-  height: 250px;
+  width: 25rem;
+  height: 25rem;
 }
 
 #connect-meta {
-  width: 300px;
-  margin-bottom: 60px;
+  width: 30rem;
+  margin-bottom: 6rem;
 }
 
 .address {
-  font-size: 20px;
-  padding: 20px;
+  font-size: 2rem;
+  padding: 2rem;
   color: #aaa;
 }
 
@@ -52,17 +56,17 @@
 }
 
 .final-activate-description {
-  font-size: 20px;
-  margin-bottom: 30px;
+  font-size: 2rem;
+  margin-bottom: 3rem;
   color: #aaa;
 }
 
 .btn.btn-footer-activate {
-  margin-bottom: 235px;
+  margin-bottom: 23.5rem;
   background-color: rgb(162, 246, 218);
 }
 
 .btn.btn-footer-activate:hover {
-  margin-bottom: 235px;
+  margin-bottom: 23.5rem;
   background-color: rgb(98, 150, 132);
 }
