--- a/style/member.css
+++ b/style/member.css
@@ -1,3 +1,7 @@
+html {
+  font-size: 62.5%;
+}
+
 /* Become member Page */
 .mint {
   text-align: center;
@@ -8,32 +12,32 @@
 }
 
 .figure {
-  padding: 80px 100px;
+  padding: 8rem 10rem;
   align-items: center;
   justify-items: center;
 }
 
 .figure-text {
-  padding: 32px;
+  padding: 3.2rem;
 }
 
 .figure-container {
   background-color: #273a98;
-  border-radius: 15px;
+  border-radius: 1.5rem;
 }
 
 .figure-text-container {
   display: flex;
   flex-direction: column;
-  width: 400px;
+  width: 40rem;
   height: auto;
   flex-grow: 1;
 
   align-items: center;
   justify-content: center;
 
-  padding: 10px;
-  margin-bottom: 70px;
+  padding: 1rem;
+  margin-bottom: 7rem;
 }
 
 .figure-img-container {
@@ -42,34 +46,34 @@
 
 .figure-img {
   opacity: 0;
-  width: 500px;
+  width: 50rem;
   height: auto;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
 }
 
 .mint-heading-description {
-  font-size: 16px;
+  font-size: 1.6rem;
 }
 
 .mint.heading-primary {
-  margin-bottom: 10px;
+  margin-bottom: 1rem;
 }
 
 .prop-list {
-  width: 330px;
+  width: 33rem;
   list-style: none;
   display: flex;
   flex-direction: column;
 }
 
 .prop {
-  border-spacing: 0px;
+  border-spacing: 0;
   border-collapse: collapse;
 
-  font-size: 24px;
+  font-size: 2.4rem;
   font-weight: 500;
-  padding: 20px 0;
+  padding: 2rem 0;
 }
 
 .prop-amount {
@@ -77,7 +81,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 20px 5px;
+  padding: 2rem 0.5rem;
 }
 
 .prop-1 {
@@ -90,28 +94,28 @@
 
 .prop-text {
   font-weight: 500;
-  font-size: 24px;
+  font-size: 2.4rem;
 }
 
 .figure-text.heading-secondary {
-  padding: 20px;
+  padding: 2rem;
   margin: 0;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .prop-heading-description {
-  font-size: 14px;
-  padding: 20px 10px;
-  margin-bottom: 5px;
+  font-size: 1.4rem;
+  padding: 2rem 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .btn--mint {
-  width: 330px;
+  width: 33rem;
 }
 
 .btn--max {
-  padding: 10px;
+  padding: 1rem;
   background-color: #fff;
   color: #444;
 }
@@ -119,7 +123,7 @@
 .amount {
   cursor: pointer;
   font-weight: 700;
-  font-size: 30px;
+  font-size: 3rem;
 }
 
 #dis-amount {
