--- a/style/queries.css
+++ b/style/queries.css
@@ -67,7 +67,7 @@
   }
 
   .hero-img {
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
   }
 
@@ -92,7 +92,11 @@
   }
 
   .section-hero {
-    height: 92rem;
+    height: 80rem;
+  }
+
+  .hero-img {
+    width: 100%;
   }
 
   .hero-description {
@@ -108,7 +112,7 @@
   }
 
   .fea-img {
-    width: 80%;
+    width: 100%;
   }
 
   .fea-img-box:nth-child(2) {
